--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,8 +4,7 @@
     justify-content:center;
     background-color: #001529 !important;
     margin-top: 50px;
-    padding: 15px i !important;
-
+    padding: 15px !important;
     p{
         margin: 0;
         color: white;
