--- a/src/components/MovieCatalog/MovieCatalog.scss
+++ b/src/components/MovieCatalog/MovieCatalog.scss
@@ -1,11 +1,15 @@
-.movie-catalog {
-  display: flex !important;
+.catalog {
+  display: inline-flex !important;
   justify-content: center !important;
-  margin-top: 25px;
+  flex-wrap: nowrap;
+  margin: 20px 110px;
+  max-width: 100%;
+  margin-left: 1.2%;
+  margin-right: 1%;
 
   .ant-card-cover {
     img {
-      height: 350px !important;
+      height: 325px !important;
     }
   }
 
